--- a/.gitignore
+++ b/.gitignore
@@ -58,3 +58,8 @@ yarn-debug.log*
 # TODO Comment out these rules if you are OK with secrets being uploaded to the repo
 config/initializers/secret_token.rb
 config/secrets.yml
+
+
+#asdf config file
+.tool-versions
+
